<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>mx.randalf.standard</groupId>
		<artifactId>RandalfStandard</artifactId>
		<version>2.0.0</version>
	</parent>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<groupId>mx.randalf.standard.tei</groupId>
	<artifactId>RandalfTei</artifactId>
	<dependencies>
		<dependency>
			<groupId>mx.randalf.xsd</groupId>
			<artifactId>RandalfXsd</artifactId>
			<version>3.0.0</version>
		</dependency>
	</dependencies>
	<version>3.0.1</version>
</project>